--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
+h3.align-left {
+  text-align: left;
+}
+
+#post-title h1 {
+  margin-top: 0;
+}
+
 .navbar-custom {
-	background: #222;
+	background: #0c030c;
 }
 
 .navbar-brand {
@@ -8,25 +16,54 @@
 	font-size: 1.4em;
 }
 
+.navbar-brand:hover {
+	color: #c2c0c0;
+}
+
 .jumbotron {
-    position: relative;
-    background: #000 url("img/mountains-hiker-header.jpeg") center bottom;
-    width: 100%;
-    height: 200px;
-    background-size: cover;
-    overflow: hidden;
+  position: relative;
+  background: #000 url("img/hiking.jpg") center bottom;
+  width: 100%;
+  height: 200px;
+  background-size: cover;
+  overflow: hidden;
 }
 
 .navbar {
   margin-bottom: 0;
- }
+}
 
+.new-post {
+  margin-bottom: 30px;
+}
 
+.post {
+
+  border-left: 1px dotted #0c030c;
+}
+
+.btn-custom {
+  color: #fff;
+  background-color: #282b3f;
+  border-color: #1a1c2d;
+}
+
+.form-control:focus {
+  border-color: #53bf6b;
+  box-shadow: inset 0 1px 1px rgba(71, 172, 93, 0.075), 0 0 8px rgba(83, 191, 107, 0.6);
+}
+
+.main-footer {
+  background-color: #0c030c;
+  color: white;
+  padding: 30px 0 20px 0;
+  clear: both;
+}
 
 /* Media Queries */
 @media (min-width: 768px) {
   .jumbotron {
-    height: 400px;
+    height: 300px;
   }
   .navbar-brand {
   	font-size: 2em;
