--- a/public/style.css
+++ b/public/style.css
@@ -63,7 +63,7 @@ h3.align-left {
 }
 
 .post-area {
-  border-left: 1px dotted #eeeeee;
+  border-left: 1px dotted #eee;
   text-align: justify;
 }
 
